assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

/* Global styles */
* {
    margin: 0;
    padding: 0;
    border: 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
}

body, html {
    height: 100%;
    font-family: Montserrat, sans-serif;
}

/* Credit for how to keep footer at the bottom https://youtu.be/hK_v6FNIFK0 */
.main-container {
    min-height: calc(100vh - 62px);
}

/* Navigation bar */
#navbarNavDropdown > ul > li:nth-child(1) > a:hover,
#navbarNavDropdown > ul > li:nth-child(2) > a:hover,
#navbarNavDropdown > ul > li:nth-child(3) > a:hover,
#navbarNavDropdown > ul > li:nth-child(4) > a:hover,
#navbarNavDropdown > ul > li:nth-child(5) > a:hover {
    border-bottom: 2px solid #fff;
}

body > nav > a {
    padding-left: 15px;
}

/* Hero image */
.hero-image {
    background: url("../images/hero-plant.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    height: 250px;
    width: 100%;
}

/* About company */
#homepage {
    padding: 30px;
}

.vision-section,
.story-section {
    padding: 20px;
    display: flex;
}

.vision-section {
    flex-direction: column-reverse;
}

.story-section {
    flex-direction: column;
}

#homepage > div.media.story-section > img,
#homepage > div.media.vision-section > img {
        width: 640px;
        height: auto;
        align-self: center;
        padding: 10px;
}

#homepage > div.media.story-section > div > h1,
#homepage > div.media.vision-section > div > h1 {
    padding: 10px;
    font-size: 25px;
    text-align: center;
}

#homepage > div.media.story-section > div > p,
#homepage > div.media.vision-section > div > p {
    padding: 10px;
    text-align: justify;
}

/* Gallery */
.about-gallery {
    text-align: justify;
    padding: 10px 50px;
}

.gallery-row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    padding: 0 4px;
}

.gallery-column {
    -webkit-box-flex: 33.3%;
        -ms-flex: 33.3%;
            flex: 33.3%;
    max-width: 33.3%;
    padding: 0 4px;
}

.gallery-column img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

/* Bundles */
.my-list-group {
    border: 1px solid #036016;
}

.about-bundle {
    font-weight: 500;
}

/* Events & Workshops */
.about-activities {
    font-weight: 500;
}

/* Footer */
footer {
    width: 100%;
    height: 62px;
}

.navbar-text {
    color: #fff !important;
    width: 50%;
    padding-left: 15px;
}

.fa-copyright {
    font-size: 15px;
}

.fa-instagram-square,
.fa-facebook-square,
.fa-youtube-square,
.fa-pinterest-square {
    color: #fff;
    font-size: 23px;
}

div.social-media {
    width: 50%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
    margin: auto;
    letter-spacing: 15px;
}

/* Media queries for responsive design */
@media screen and (max-width: 768px) {
    .navbar-toggler {
        font-size: 1.5rem;
    }

    #navbarNavDropdown > ul > li:nth-child(1) > a:hover,
    #navbarNavDropdown > ul > li:nth-child(2) > a:hover,
    #navbarNavDropdown > ul > li:nth-child(3) > a:hover,
    #navbarNavDropdown > ul > li:nth-child(4) > a:hover,
    #navbarNavDropdown > ul > li:nth-child(5) > a:hover {
        border-bottom: 0;
    }

    .main-container {
    min-height: calc(100vh - 66px - 56px);
    }

    .hero-image {
        height: 150px;
    }

    body > div > section > h1 {
        font-size: 32px;
        padding-left: 10px;
        padding-right: 10px;
    }

    .gallery-column {
        -webkit-box-flex: 100%;
            -ms-flex: 100%;
                flex: 100%;
        max-width: 100%;
    }

    footer {
        height: 56px;
    }

    .navbar-text {
        padding-left: 5px;
    }

    .first-heading {
        font-size: 32px;
    }

    .second-heading {
        font-size: 24px;
    }
}

@media screen and (min-width: 768px) {
    nav {
        font-size: 1.25rem;
    }
}

@media screen and (min-width: 1201px){
    .story-section {
    display: flex;
    flex-direction: row;
    }
    .vision-section {
    display: flex;
    flex-direction: row;
    }
}

